# RoomResponse

./: .gitignore  CLEANUP_ANALYSIS.md  DEPRECATED_CODE_INVENTORY.md  DatasetCollector.py  FeatureAnalyser.py  FeatureExtractor.py  FirFilterFileIO.py  GUI_MULTICHANNEL_INTEGRATION_PLAN.md  MULTICHANNEL_SYSTEM_PLAN.md  MULTICHANNEL_UPGRADE_PLAN.md  MicTesting.py  ONSET_ALIGNMENT_IMPLEMENTATION.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_TEST_RESULTS.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_SUCCESS_SUMMARY.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_PLAN.md  PIANO_MEASUREMENTS_SUMMARY.md  PIANO_MULTICHANNEL_PLAN.md  REFACTORING_COMPLETE_SUMMARY.md  ROOMRESPONSERECORDER_REFACTORING_PLAN.md  ROOMRESPONSERECORDER_REFACTORING_PLAN_V2.md  Readme.md  RoomResponseRecorder.py  RoomResponse_GUI_Tech_Requirements.md  SAVE_FORMAT_FEATURE.md  SOLUTION_INSTALL_BEHRINGER_DRIVER.md  ScenarioClassifier.py  ScenarioManager.py  ScenarioSelector.py  SpectrumVisualizer.html  TECHNICAL_DOCUMENTATION.md  TESTING_GUIDE.md  analyze_piano_scenarios.py  batch_collect.ps1  batch_collect.sh  (+74 more)
.claude/: settings.local.json
ESPRIT/: BATCH_ANALYSIS_RESULTS.md  CONTACT_REMOVAL.md  README.md  esprit.py  (+31 more)
sdl_audio_core/: __init__.py  build_config.json  pyproject.toml  sdl_audio_core.cp313-win_amd64.pyd  setup.py
sdl_audio_core/include/: common.h
sdl_audio_core/src/: audio_engine.cpp  audio_engine.h  device_manager.cpp  device_manager.h  python_bindings.cpp  room_response.cpp  room_response.h
(+48 files in other folders)
